--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   background-color: var(--calculator-color);
   padding-bottom: 50px;
   padding-top: 50px;
+  border-radius: 10px;
 }
 
 .output {
